--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -19,7 +19,7 @@
         <button id="redraw">Force redraw</button>
     </div>
 
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="container" width="100%"
+    <svg xmlns="http://www.w3.org/2000/svg" id="container" width="100%"
          height="100%" style="background-color: #eceff1;">
 
 
@@ -105,6 +105,7 @@
             var style = {
                 order: 1,
                 dx: 1,
+                folded: false,
                 container: {
                     kind: "rectangle",
                     borderThickness: "0",
