mindmap container style fixed / useless buttons cleared

--- a/views/layouts/mindmap.ejs
+++ b/views/layouts/mindmap.ejs
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
 
     <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/lodash.min.js"></script>
+    <script src="/js/material.min.js"></script>
     <!--SCRIPTS END-->
 
 </head>
@@ -51,7 +55,7 @@
         </div>
     </header>
 
-    <main class="mdl-layout__content">
+    <main id="mindmap_wrapper" class="mdl-layout__content">
         <div class="page-content">
 
             <%- body %>
