--- a/assets/styles/sass/mindmap/mindmap.scss
+++ b/assets/styles/sass/mindmap/mindmap.scss
@@ -1,9 +1,20 @@
 /**
  * La mindmap !!!
  */
+ 
+#mindmap_wrapper {
+    position: fixed;
+    top: 0;	
+}
+
+#mindmap_wrapper .page-content {
+    padding: 0;
+}
+
 #mindmap {
   width: 100%;
   height: 800px;
+
 }
 
 svg {
