modify node edit sync bug fixed

--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -49,7 +49,7 @@
                         "style": "italic",
                         "decoration": "strike"
                     }
-                });
+                }, true);
         };
 
         document.getElementById('out_delete').onclick = function () {
