--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -18,6 +18,37 @@
         <button id="in_delete">In: Delete node</button>-->
         <button id="redraw">Force redraw</button>
     </div>
+	
+	<div id="editBox" class="" style="display:none;position:fixed;z-index:10;top:80px;right:10px;background:white;width:300px;box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);">
+		<h3 style=" border-bottom:1px solid #ddd;   font-size: 16px;    font-weight: 500;   margin:0;  text-transform: uppercase;">Édition d'un noeud</h3>
+
+		<form id="editBoxForm" style="margin:0 10px;">
+
+			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+				<input class="mdl-textfield__input" type="text" id="editBox_label">
+				<label style="font-weight:bold;" class="mdl-textfield__label" for="editBox_label">Label</label>
+			</div>
+
+			<b>Format</b>
+			<label class="mdl-icon-toggle mdl-js-icon-toggle mdl-js-ripple-effect" for="editBox_bold">
+				<input type="checkbox" id="editBox_bold" class="mdl-icon-toggle__input" name="font_bold" value="enable">
+				<i class="mdl-icon-toggle__label material-icons">format_bold</i>
+			</label>
+			<label class="mdl-icon-toggle mdl-js-icon-toggle mdl-js-ripple-effect" for="editBox_italic">
+				<input type="checkbox" id="editBox_italic" class="mdl-icon-toggle__input" name="font_italic" value="enable">
+				<i class="mdl-icon-toggle__label material-icons">format_italic</i>
+			</label>
+			<label class="mdl-icon-toggle mdl-js-icon-toggle mdl-js-ripple-effect" for="editBox_underline">
+				<input type="checkbox" id="editBox_underline" class="mdl-icon-toggle__input" name="font_underline" value="enable">
+				<i class="mdl-icon-toggle__label material-icons">format_underlined</i>
+			</label>
+			<label class="mdl-icon-toggle mdl-js-icon-toggle mdl-js-ripple-effect" for="editBox_strike">
+				<input type="checkbox" id="editBox_strike" class="mdl-icon-toggle__input" name="font_underline" value="enable">
+				<i class="mdl-icon-toggle__label material-icons">format_strikethrough</i>
+			</label>
+
+		</form>
+	</div>
 
     <svg xmlns="http://www.w3.org/2000/svg" id="container" width="100%"
          height="100%" style="background-color: #eceff1;">
