clear user console.log / move editbox's css in the didacted css file / remove useless control

--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -1,11 +1,11 @@
 <div id="mindmap">
     <div style="position:fixed;z-index:10;top:80px;left:5px;">
-        <button disabled id="">Out: New node</button>
+        <!--<button disabled id="">Out: New node</button>
         <button disabled id="">Out: Select node</button>
         <button disabled id="">Out: Unselect node</button>
-        <!--<button disabled id="">Out: Force unselect</button>-->
+        <button disabled id="">Out: Force unselect</button>
         <button id="out_modify">Out: Modify node</button>
-        <button disabled id="">Out: Modify nodes</button>
+        <button disabled id="">Out: Modify nodes</button>-->
         <button id="out_delete">Out: Delete node</button>
     </div>
 
@@ -19,10 +19,10 @@
         <button id="redraw">Force redraw</button>
     </div>
 	
-	<div id="editBox" class="" style="display:none;position:fixed;z-index:10;top:80px;right:10px;background:white;width:300px;box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);">
-		<h3 style=" border-bottom:1px solid #ddd;   font-size: 16px;    font-weight: 500;   margin:0;  text-transform: uppercase;">Édition d'un noeud</h3>
+	<div id="editBox" >
+		<h3>Édition d'un noeud</h3>
 
-		<form id="editBoxForm" style="margin:0 10px;">
+		<form id="editBoxForm">
 
 			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 				<input class="mdl-textfield__input" type="text" id="editBox_label">
