--- a/assets/styles/sass/mindmap/mindmap.scss
+++ b/assets/styles/sass/mindmap/mindmap.scss
@@ -52,3 +52,15 @@ g:not([id=""]) > circle[name=lx], g:not([id=""]) > circle[name=rx] {
 g:not([id=""]):hover > circle[name=lx], g:not([id=""]):hover > circle[name=rx] {
   fill:#64b5f6;
 }
+
+#editBox {
+display:none;position:fixed;z-index:10;top:80px;right:10px;background:white;width:300px;box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+#editBox h3 {
+border-bottom:1px solid #ddd;   font-size: 16px;    font-weight: 500;   margin:0;  text-transform: uppercase;
+}
+
+#editBoxForm {
+margin:0 10px;
+}
