--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -27,9 +27,13 @@
 
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
 
     <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/lodash.min.js"></script>
+    <script src="/js/material.min.js"></script>
     <!--SCRIPTS END-->
 
 </head>
