--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -32,10 +32,14 @@
 
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
 
 
     <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/lodash.min.js"></script>
+    <script src="/js/material.min.js"></script>
     <!--SCRIPTS END-->
 
 </head>
@@ -82,6 +86,7 @@
         <%- body %>
 
         <!--TEMPLATES-->
+        
         <!--TEMPLATES END-->
 
     </main>
