--- a/assets/styles/sass/mindmap/mindmap.scss
+++ b/assets/styles/sass/mindmap/mindmap.scss
@@ -1,9 +1,23 @@
 /**
  * La mindmap !!!
  */
+ 
+#mindmap_wrapper {
+    position: fixed;
+    top: 0;	
+    left: 0;	
+    right: 0;	
+	
+}
+
+#mindmap_wrapper .page-content {
+    padding: 0;
+}
+
 #mindmap {
   width: 100%;
   height: 800px;
+
 }
 
 svg {
@@ -37,4 +51,196 @@ g:not([id=""]) > circle[name=lx], g:not([id=""]) > circle[name=rx] {
 
 g:not([id=""]):hover > circle[name=lx], g:not([id=""]):hover > circle[name=rx] {
   fill:#64b5f6;
+}
+
+#editBox {
+display:none;
+position:fixed;
+z-index:10;
+top:80px;
+right:10px;
+background:white;
+width:300px;
+box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+#editBox h3 {
+border-bottom:1px solid #ddd;
+font-size: 16px;
+font-weight: 500;
+margin:0;
+text-transform: uppercase;
+}
+
+#editBoxForm {
+margin:0 10px;
+}
+
+#workers {
+	position:fixed;
+	left:0;
+	bottom:10px;
+	z-index:8;
+}
+
+.avatar {
+	width:36px;
+	height:36px;
+	aborder-top-left-radius:24px;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	float:right;
+	background-size:cover;
+	margin-left:10px;
+	margin-top:12px;
+	cursor:pointer;
+	overflow:hidden;
+	/*transition: width 0.5s, margin 0.5s, opacity 0.5s;*/
+}
+
+.avatar:last-child { 
+	margin-top:0; 
+	width:48px;
+	height:48px;
+}
+
+#chatBoxStatut {
+	display:none;
+}
+#chatBoxStatut:checked + #chatBox {
+
+	display:block;
+}
+
+#chatBox {
+	font-family: Roboto;
+	position:fixed;
+	top:80px;
+	left:10px;
+
+	bottom: 10px;
+	background:white;
+	z-index:9;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	width:300px;
+	
+	display:none;
+	}
+
+#chatBoxTitle {
+	position:absolute;	
+	left:0;
+	right:0;
+}
+
+.boxTitle {
+	text-align:center;
+	padding:5px 5px;
+	line-height:26px;
+	height:26px;
+	font-weight:bold;
+	color:#fff;
+	background-color:rgb(63, 81, 181);
+}
+
+.closer {
+	position:absolute;
+	right:5px;
+}
+#chatBoxScroller {
+	position:absolute;
+	top:36px;
+	bottom:38px;
+	left:0;
+	right:0;
+	overflow-y:auto;
+	overflow-x:hidden;
+}
+
+#messages {
+	margin:0 2px;
+}
+
+#messages td{
+	border-top: 1px solid #ddd;
+}
+
+.picture {
+    display: inline-block;
+	width:50px;
+}
+
+.picture div {
+	width:36px;
+	height:36px;
+	margin:10px 0 0;
+	aborder-radius: 18px;
+	background-size:cover;
+	margin-left:7px;
+}
+
+
+
+.author {
+	font-weight:bold;
+	margin:8px 0 0;
+	color:#222;
+}
+
+.time {
+	float:right;
+	font-weight:normal;
+	color:#aaa;
+}
+.message {
+	padding-bottom:8px;
+}
+
+#chatBoxInput {
+	height:28px;
+	padding-top: 5px;
+	margin:0 5px 5px;
+	position:absolute;
+	bottom:0;
+	left:0;
+	right:0;
+	border-top: 1px solid #ddd;
+}
+
+#chatBoxInputField {
+	width:260px;
+	display: inline-block;
+}
+
+#chatBoxInputSend {
+	display: inline-block;
+	vertical-align:top;
+	color:rgb(63, 81, 181);
+}
+
+.simpleTextfield { 
+	border:0;
+	height:24px;
+	width:100%;
+	border-bottom: 2px solid #ddd;
+	transition: border 0.3s;
+}
+
+.simpleTextfield:focus { 
+	border-bottom: 2px solid rgb(63, 81, 181);
+}
+
+
+
+#chatBoxStatut:checked + #chatBox + #workers > #chatBoxOpenerContainer > #chatBoxOpener {
+	width:300px;
+	opacity:0;
+}
+
+#chatBoxOpener {
+
+	background-color:rgb(63, 81, 181);
+	color:#fff;
+	text-align:center;
+	font-size:24px;
+	overflow:hidden;
 }
