--- a/assets/styles/sass/mindmap/mindmap.scss
+++ b/assets/styles/sass/mindmap/mindmap.scss
@@ -7,7 +7,7 @@
     top: 0;	
     left: 0;	
     right: 0;	
-	
+	bottom: 0;
 }
 
 #mindmap_wrapper .page-content {
@@ -16,8 +16,7 @@
 
 #mindmap {
   width: 100%;
-  height: 800px;
-
+  height: 100%;
 }
 
 svg {
