--- a/assets/styles/sass/base/buttons.scss
+++ b/assets/styles/sass/base/buttons.scss
@@ -9,7 +9,7 @@ $socials : (
 );
 
 .button-social {
-  @extend .mdl-button, .mdl-button--raised;
+  //@extend .mdl-button, .mdl-button--raised;
 
   margin: 5px 5px 10px;
 }
