--- a/assets/styles/sass/misc/flaticon.css
+++ b/assets/styles/sass/misc/flaticon.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "Flaticon";
-    src: url("/fonts/flaticon.eot");
-    src: url("/fonts/flaticon.eot#iefix") format("embedded-opentype"),
-    url("/fonts/flaticon.woff") format("woff"),
-    url("/fonts/flaticon.ttf") format("truetype"),
-    url("/fonts/flaticon.svg") format("svg");
+    src: url("/font/flaticon.eot");
+    src: url("/font/flaticon.eot#iefix") format("embedded-opentype"),
+    url("/font/flaticon.woff") format("woff"),
+    url("/font/flaticon.ttf") format("truetype"),
+    url("/font/flaticon.svg") format("svg");
     font-weight: normal;
     font-style: normal;
 }
