Fix sur le layout et view

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -8,11 +8,11 @@
             <form action="/auth/process/login" method="post">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
+                        <input id="email" type="email" class="validate" name="mail">
                         <label for="email">Adresse e-mail</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
+                        <input id="password" type="password" class="validate" name="password">
                         <label for="password">Mot de passe</label>
                     </div>
                 </div>
