Le layout+view mindmap sont terminés

--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -26,6 +26,8 @@
 @import "sass/base/buttons";
 @import "sass/base/card";
 
+@import "sass/mindmap/mindmap";
+
 //@import "sass/base/header";
 //@import "sass/base/content";
 //@import "sass/base/footer";
