--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -4,101 +4,104 @@
     <meta charset="UTF-8">
     <title><%= (title) ? title + '|' + AppName : AppName %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&lang=fr">-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="/styles/importer.css">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!--STYLES-->
+    <!--STYLES END-->
 </head>
 <body>
 
-    <nav class="blue">
-        <div class="container nav-wrapper">
-            <a href="/" class="brand-logo"><%= AppName %></a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse">
-                <i class="material-icons">menu</i>
-            </a>
+<nav class="blue">
+    <div class="container nav-wrapper">
+        <a href="/" class="brand-logo"><%= AppName %></a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse">
+            <i class="material-icons">menu</i>
+        </a>
 
-            <% if(req.isAuthenticated()) { %>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li>
-                        <a class="dropdown-button" data-activates="dropdown-user" data-beloworigin="true">
-                            <% if(req.user.img_url) { %>
-                                <img class="avatar left" src="<%- req.user.img_url %>">
-                            <% } else  { %>
-                                <i class="material-icons left">account_circle</i>
-                            <% } %>
+        <% if(req.isAuthenticated()) { %>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li>
+                <a class="dropdown-button" data-activates="dropdown-user" data-beloworigin="true">
+                    <% if(req.user.img_url) { %>
+                    <img class="avatar left" src="<%- req.user.img_url %>">
+                    <% } else  { %>
+                    <i class="material-icons left">account_circle</i>
+                    <% } %>
 
-                            <%= req.user.display_name %>
-                            <i class="material-icons right">arrow_drop_down</i>
-                        </a>
-                        <ul id='dropdown-user' class='dropdown-content'>
-                            <li><a href='/auth/process/logout'>Se déconnecter</a></li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul class="side-nav" id="mobile-demo">
+                    <%= req.user.display_name %>
+                    <i class="material-icons right">arrow_drop_down</i>
+                </a>
+                <ul id='dropdown-user' class='dropdown-content'>
                     <li><a href='/auth/process/logout'>Se déconnecter</a></li>
                 </ul>
-            <% } else { %>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="/auth/login">Connexion</a></li>
-                <li><a href="/auth/signup">Inscription</a></li>
-            </ul>
+            </li>
+        </ul>
 
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href="/auth/login">Connexion</a></li>
-                <li><a href="/auth/signup">Inscription</a></li>
-            </ul>
-            <% } %>
-        </div>
-    </nav>
+        <ul class="side-nav" id="mobile-demo">
+            <li><a href='/auth/process/logout'>Se déconnecter</a></li>
+        </ul>
+        <% } else { %>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="/auth/login">Connexion</a></li>
+            <li><a href="/auth/signup">Inscription</a></li>
+        </ul>
 
-    <main class="section">
+        <ul class="side-nav" id="mobile-demo">
+            <li><a href="/auth/login">Connexion</a></li>
+            <li><a href="/auth/signup">Inscription</a></li>
+        </ul>
+        <% } %>
+    </div>
+</nav>
+
+<main class="section">
+    <div class="container">
+        <%- body %>
+    </div>
+</main>
+
+
+<footer class="page-footer blue">
+    <div class="container">
+
+    </div>
+    <div class="footer-copyright">
         <div class="container">
-            <%- body %>
+            &copy; 2016 <%= AppName %>
         </div>
-    </main>
+    </div>
+</footer>
 
 
-    <footer class="page-footer blue">
-        <div class="container">
-
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                &copy; 2016 <%= AppName %>
-            </div>
-        </div>
-    </footer>
+<!--SCRIPTS-->
+<!--SCRIPTS END-->
 
 
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dependencies/lodash.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="/js/materialize.min.js"></script>
+<script>
+    $(".button-collapse").sideNav();
+    $('.dropdown-button').dropdown();
+</script>
 
-    <script>
-        $(".button-collapse").sideNav();
-        $('.dropdown-button').dropdown();
-    </script>
 
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                        (
-                                i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+<!-- GOOGLE ANALYTICS -->
 
-        ga('create', 'UA-71343349-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (
+                            i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-71343349-1', 'auto');
+    ga('send', 'pageview');
+</script>
 </body>
 </html>
