--- a/views/layouts/mindmap.ejs
+++ b/views/layouts/mindmap.ejs
@@ -5,83 +5,85 @@
     <title><%= (title) ? title + ' | ' + AppName : AppName %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&lang=fr">-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="/styles/importer.css">
 
+    <!--STYLES-->
+    <!--STYLES END-->
 </head>
 <body>
-    <nav class="blue">
-        <div class="container nav-wrapper">
-            <ul class="left">
-                <li>
-                    <a href="/">
-                        <i class="material-icons left">arrow_back</i>
-                        <%= title %>
-                    </a>
-                </li>
-            </ul>
+<nav class="blue">
+    <div class="container nav-wrapper">
+        <ul class="left">
+            <li>
+                <a href="/">
+                    <i class="material-icons left">arrow_back</i>
+                    <%= title %>
+                </a>
+            </li>
+        </ul>
 
-            <a href="#" data-activates="mobile-demo" class="button-collapse">
-                <i class="material-icons">menu</i>
-            </a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse">
+            <i class="material-icons">menu</i>
+        </a>
 
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li>
-                    <a class="dropdown-button" data-activates="dropdown-user" data-beloworigin="true">
-                        <% if(req.user.img_url) { %>
-                        <img class="avatar left" src="<%- req.user.img_url %>">
-                        <% } else  { %>
-                        <i class="material-icons left">account_circle</i>
-                        <% } %>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li>
+                <a class="dropdown-button" data-activates="dropdown-user" data-beloworigin="true">
+                    <% if(req.user.img_url) { %>
+                    <img class="avatar left" src="<%- req.user.img_url %>">
+                    <% } else  { %>
+                    <i class="material-icons left">account_circle</i>
+                    <% } %>
 
-                        <%= req.user.display_name %>
-                        <i class="material-icons right">arrow_drop_down</i>
-                    </a>
-                    <ul id='dropdown-user' class='dropdown-content'>
-                        <li><a href='/auth/process/logout'>Se déconnecter</a></li>
-                    </ul>
-                </li>
-            </ul>
+                    <%= req.user.display_name %>
+                    <i class="material-icons right">arrow_drop_down</i>
+                </a>
+                <ul id='dropdown-user' class='dropdown-content'>
+                    <li><a href='/auth/process/logout'>Se déconnecter</a></li>
+                </ul>
+            </li>
+        </ul>
 
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href='/auth/process/logout'>Se déconnecter</a></li>
-            </ul>
-        </div>
-    </nav>
+        <ul class="side-nav" id="mobile-demo">
+            <li><a href='/auth/process/logout'>Se déconnecter</a></li>
+        </ul>
+    </div>
+</nav>
 
-    <main class="section" style="padding: 0">
-        <%- body %>
-    </main>
+<main class="section" style="padding: 0">
+    <%- body %>
+</main>
 
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dependencies/lodash.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="/js/materialize.min.js"></script>
+<!--SCRIPTS-->
+<!--SCRIPTS END-->
 
-    <script>
-        $(".button-collapse").sideNav();
-        $('.dropdown-button').dropdown();
-    </script>
+<script src="/js/ignore/app.js"></script>
 
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                        (
-                                i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-71343349-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+<script>
+    $(".button-collapse").sideNav();
+    $('.dropdown-button').dropdown();
+</script>
 
-    <%- scripts %>
+
+<!-- GOOGLE ANALYTICS -->
+
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (
+                            i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-71343349-1', 'auto');
+    ga('send', 'pageview');
+</script>
 </body>
 </html>
