--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -39,7 +39,9 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/lodash.min.js"></script>
+    <script src="/js/initMindmapEditor.js"></script>
     <script src="/js/material.min.js"></script>
+    <script src="/js/materialize.min.js"></script>
     <!--SCRIPTS END-->
 
 </head>
